--- a/views/bookings.handlebars
+++ b/views/bookings.handlebars
@@ -1,64 +1,44 @@
-<h1 class="title is-2" >Bookings</h1>
+<h1 class="title is-2">Bookings</h1>
 
-    <div class="notification is-danger is-light">
-        {{!-- you can remove the button below if you want --}}
-        <button class="delete"></button>
-        Error Flash messages goes here...
-        <a href="https://bulma.io/documentation/elements/notification/">Read here if you wanna change the style</a>
-    </div>
-    <div class="notification is-success is-light">
-        {{!-- you can remove the button below if you want --}}
-        <button class="delete"></button>
-        Success Flash messages goes here...
-        <a href="https://bulma.io/documentation/elements/notification/">Read here if you wanna change the style</a>
-    </div>
+{{!-- <div class="notification is-danger is-light">
+    {{!-- you can remove the button below if you want --}}
+    <button class="delete"></button>
+    Error Flash messages goes here...
+    <a href="https://bulma.io/documentation/elements/notification/">Read here if you wanna change the style</a>
+</div>
+<div class="notification is-success is-light">
+    {{!-- you can remove the button below if you want --}}
+    <button class="delete"></button>
+    Success Flash messages goes here...
+    <a href="https://bulma.io/documentation/elements/notification/">Read here if you wanna change the style</a>
+</div> --}}
 
-    <div class="field">
-        <label class="label" for="">Bookings for</label>
-        <input class="input is-normal is-2" type="text" placeholder="enter username" > 
-    </div>
-    <div class="field" >
-        <input class="button is-info" type="submit" value="Search">
-    </div>
+<div class="field">
+    <input class="button is-info" type="submit" value="Search">
+</div>
+{{#each tables}}
+<div class="field">
+    <label class="label" for="">Bookings for, <a href="/bookings/{{this.username}}">{{this.username}}</a></label>
+    <input class="input is-normal is-2" type="text" placeholder="enter username">
+</div>
 
-<table class="table is-fullwidth" >
+<table class="table is-fullwidth">
     <tr>
-        <th>Table name</th>
-        <th>Table capacity</th>
-        <th>Booking size</th>
-        <th>Booked by</th>
-        <th>Contact number</th>
-        <th></th>
-    </tr>
-    <tr>
-        <td>Table 1</td>
-        <td>4</td>
-        <td>2</td>
-        <td>Indiana Jones</td>
-        <td>082 900 1276</td>
+        <th>{{this.table_name}}</th>
+        <th>{{this.capacity}}</th>
+        <th> {{this.number_of_people}}</th>
+        <th>{{this.username}}</th>
+        <th>{{this.contact_number}}</th>
+        <th>
         <td>
-            <button class="button is-warning" >Cancel booking</button>
-        </td>
-    </tr>
-    <tr>
-        <td>Table 2</td>
-        <td>4</td>
-        <td>2</td>
-        <td>Lara Croft</td>
-        <td>082 786 3432</td>
-        <td>
-            <button class="button is-warning" >Cancel booking</button>
-        </td>
+            <form action="/cancel" method="post">
 
-    </tr>
-    <tr>
-        <td>Table 3</td>
-        <td>4</td>
-        <td>2</td>
-        <td>Indiana Jones</td>
-        <td>082 900 1276</td>
-        <td>
-            <button class="button is-warning" >Cancel booking</button>
+                <button class="button is-warning" name="toCancel" value="{{this.table_name}}">Cancel booking</button>
+            </form>
         </td>
+        </th>
     </tr>
+
 </table>
+
+{{/each}}
